--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -361,7 +361,7 @@
   "transaction": {
     "buy": "您购买了 {parcel_link} 地块",
     "buy_mana": "您已经买了 {mana} MANA",
-    "cancel": "您取消了 {parcel_link} 上的 {publication_link}",
+    "cancel": "你在{parcel_link}取消了这笔交易",
     "cancel_mortgage": "您取消了购买地块 {parcel_link} 的抵押",
     "claim_mortgage_resolution": "您认领了 {parcel_link}",
     "create_estate": "您创建了连块土地 {name}",
@@ -374,8 +374,8 @@
     "edit_estate_parcels_removed": "您从连块土地 {name} 中移除了 {amount} 地块",
     "manage": "您授权{address_link}更新{parcel_link}上的内容",
     "manage_revoked": "您撤销了允许{address_link}更新{parcel_link}内容的授权",
-    "mortgage_mana": "您{action} {mortgage_contract_link}代表您操作 MANA。",
-    "mortgage_rcn": "您{action} {mortgage_contract_link}代表您运营 RCN。",
+    "mortgage_mana": "您{action} {mortgage_contract_link}代表您操作 MANA",
+    "mortgage_rcn": "您{action} {mortgage_contract_link}代表您运营 RCN",
     "pay_mortgage": "您为抵押购买{parcel_link}包的部分支付{amount}",
     "publish": "您发布了{parcel_link}地块",
     "transfer": "您将{asset_type} {asset_link}转移到{owner_link}",
