--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -375,33 +375,33 @@
   "transaction": {
     "buy": "{parcel_link}을(를) 구입했습니다.",
     "buy_mana": "너는 {mana} MANA를 구입했다.",
-    "cancel": "{parcel_link}의 {publication_link}을 취소했습니다.",
+    "cancel": "{parcel_link}에서 판매를 취소했습니다",
     "cancel_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 취소합니다.",
-    "claim_mortgage_resolution": "당신은 {parcel_link}을 주장했습니다.",
+    "claim_mortgage_resolution": "당신은 {parcel_link}을 주장했습니다",
     "create_estate": "부동산 {name}을 만들었습니다.",
-    "create_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 요청했습니다.",
+    "create_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 요청했습니다",
     "dissolve_estate": "너는 재산을 해산했다. {name}",
     "edit":
       "{parcel_link}을(를) \"{name}\" 이름 및 설명 \"{description}\" (으)로 수정했습니다.",
     "edit_estate_metadata":
       "이름이 \"{name}\"이고 설명이 \"{description}\"인 부동산 {estate_id}을 편집했습니다.",
     "edit_estate_parcels_added":
-      "부동산 {name}에 {amount} 소포를 추가했습니다.",
+      "부동산 {name}에 {amount} 소포를 추가했습니다",
     "edit_estate_parcels_removed":
-      "부동산 {name}에서 {amount} 소포를 제거했습니다.",
+      "부동산 {name}에서 {amount} 소포를 제거했습니다",
     "manage":
-      "{address_link}에게 {parcel_link}의 내용을 업데이트 할 수있는 권한을 주셨습니다.",
+      "{address_link}에게 {parcel_link}의 내용을 업데이트 할 수있는 권한을 주셨습니다",
     "manage_revoked":
-      "{parcel_link}의 내용을 업데이트 할 권한을 취소했습니다 (1).",
+      "{parcel_link}의 내용을 업데이트 할 권한을 취소했습니다 (1)",
     "mortgage_mana":
-      "{action} 귀하를 대신하여 MANA를 운영하는 {mortgage_contract_link}.",
+      "{action} 귀하를 대신하여 MANA를 운영하는 {mortgage_contract_link}",
     "mortgage_rcn":
-      "{action} 귀하를 대신하여 RCN을 운영하는 {mortgage_contract_link}.",
+      "{action} 귀하를 대신하여 RCN을 운영하는 {mortgage_contract_link}",
     "pay_mortgage":
-      "소포 {parcel_link}을 구입하기 위해 모기지에 대해 {amount}의 부분 지불을했습니다.",
-    "publish": "{parcel_link}을(를) 게시했습니다.",
-    "transfer": "당신은 {asset_type} {asset_link}을 {owner_link}로 옮겼습니다.",
-    "transfer_mana": "{mana} MANA를 {address_link}으로 이전했습니다."
+      "소포 {parcel_link}을 구입하기 위해 모기지에 대해 {amount}의 부분 지불을했습니다",
+    "publish": "{parcel_link}을(를) 게시했습니다",
+    "transfer": "당신은 {asset_type} {asset_link}을 {owner_link}로 옮겼습니다",
+    "transfer_mana": "{mana} MANA를 {address_link}으로 이전했습니다"
   },
   "transaction_confirmations": {
     "count": "{confirmations_count} 가지 확인",
