--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -418,8 +418,7 @@
   },
   "transaction_confirmations": {
     "count":
-      "{confirmations_count} {confirmations_count, plural, one {confirmation} other {confirmations}}",
-    "waiting": "En attente de confirmation"
+      "{confirmations_count} {confirmations_count, plural, one {confirmation} other {confirmations}}"
   },
   "transaction_status": {
     "activity_page": "page d'activité",
