--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -385,8 +385,7 @@
       "{parcel_link}을(를) \"{name}\" 이름 및 설명 \"{description}\" (으)로 수정했습니다.",
     "edit_estate_metadata":
       "이름이 \"{name}\"이고 설명이 \"{description}\"인 부동산 {estate_id}을 편집했습니다.",
-    "edit_estate_parcels_added":
-      "부동산 {name}에 {amount} 소포를 추가했습니다",
+    "edit_estate_parcels_added": "부동산 {name}에 {amount} 소포를 추가했습니다",
     "edit_estate_parcels_removed":
       "부동산 {name}에서 {amount} 소포를 제거했습니다",
     "manage":
@@ -404,8 +403,7 @@
     "transfer_mana": "{mana} MANA를 {address_link}으로 이전했습니다"
   },
   "transaction_confirmations": {
-    "count": "{confirmations_count} 가지 확인",
-    "waiting": "확인을 기다리는 중"
+    "count": "{confirmations_count} 가지 확인"
   },
   "transaction_status": {
     "activity_page": "활동 페이지",
