--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -56,6 +56,14 @@
       "price": "precio"
     }
   },
+  "asset_manage": {
+    "address": "Dirección del operador",
+    "address_permission":
+      "Esta dirección podrá actualizar el contenido de este {asset_type}.",
+    "give_permission":
+      "Dar permiso para actualizar contenidos de {asset_name}.",
+    "manage_asset": "Gestionar {asset_type}"
+  },
   "asset_publish": {
     "already_sold": "Este {asset_name} ya está a la venta para {value}",
     "errors": {
@@ -328,14 +336,6 @@
     "set_name_and_desc": "Configura un nombre y descripción para {parcel_name}",
     "warning_tooltip":
       "Esto será usado para mostrar tu escena. Actualiza sólo si sabes lo que estas haciendo."
-  },
-  "parcel_manage": {
-    "address": "Dirección del operador",
-    "address_permission":
-      "Esta dirección podrá actualizar el contenido de este paquete.",
-    "give_permission":
-      "Dar permiso para actualizar el contenido de {parcel_name}.",
-    "manage_land": "Administrar LAND"
   },
   "parcel_tags": {
     "adjacent": "Adyacente",
