--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -57,6 +57,14 @@
       "price": "가격"
     }
   },
+  "asset_manage": {
+    "address": "운영자 주소",
+    "address_permission":
+      "이 주소는이 {asset_type}의 내용을 갱신 할 수 있습니다.",
+    "give_permission":
+      "{asset_name}의 내용을 업데이트 할 수있는 권한을 부여하십시오.",
+    "manage_asset": "{asset_type} 관리"
+  },
   "asset_publish": {
     "already_sold": "이 {asset_name}은 이미 {value}에 판매 중입니다.",
     "errors": {
@@ -326,13 +334,6 @@
     "set_name_and_desc": "{parcel_name}의 이름 및 설명 설정",
     "warning_tooltip":
       "이것은 당신의 장면을 보여주기 위해 사용됩니다. 자신이하는 일을 알고있는 경우에만 업데이트하십시오."
-  },
-  "parcel_manage": {
-    "address": "운영자 주소",
-    "address_permission": "이 주소는이 소포의 내용을 업데이트 할 수 있습니다.",
-    "give_permission":
-      "{parcel_name}의 내용을 업데이트 할 수있는 권한을 부여하십시오.",
-    "manage_land": "토지 관리"
   },
   "parcel_tags": {
     "adjacent": "인접한",
